Fix menu ui positioning bug on mobile view

--- a/src/app/control-menu/control-menu.component.scss
+++ b/src/app/control-menu/control-menu.component.scss
@@ -1,6 +1,6 @@
 .container {
+  bottom: -2.1rem;
   position: absolute;
-  bottom: 0;
   left: 0;
   right: 0;
   height: 2.1rem;
